<resources>
    <string name="app_name">Space Design System</string>
    <string name="all_component">Design System Components</string>
    <string name="all_component_description">List of all available components v%s</string>
    <string name="show_btn">show</string>
    <string name="date_mask">##/##/##</string>
    <string name="component_colors">Colors</string>
    <string name="component_colors_description">Colors description</string>
    <string name="button_description">Button description</string>
    <string name="buttons">Button</string>
    <string name="default_button_description">Default button description</string>
    <string name="default_buttons">Default button</string>
    <string name="fullwidth_button_description">fullwidth button description</string>
    <string name="fullwidth_buttons">fullwidth button</string>
    <string name="horizontal_button_description">Horizontal button description</string>
    <string name="horizontal_buttons">Horizontal button</string>
    <string name="vertical_button_description">Vertical button description</string>
    <string name="vertical_buttons">Vertical button</string>
    <string name="status_textview_description">Status TextView description</string>
    <string name="status_textview">Status TextView</string>
    <string name="controls_description">Controls description</string>
    <string name="controls">Controls</string>
    <string name="page_indicator">Page indicator</string>
    <string name="page_indicator_desc">Page indicator</string>
    <string name="toggle_switch_description">Toggle Switch description</string>
    <string name="toggle_switch">Toggle Switch</string>
    <string name="drawer_pill_description">Drawer pill description</string>
    <string name="drawer_pill">Drawer pill</string>
    <string name="tab_switcher_description">Tab Switcher is a pill drawer with specific style and covered with HorizontalScrollView</string>
    <string name="tab_switcher">Tab Switcher</string>
    <string name="list_item_button">List item button</string>
    <string name="list_item_button_desc">List item button Description</string>
    <string name="radio_buttons_description">Radio Buttons Description</string>
    <string name="radio_buttons">Radio Buttons</string>
    <string name="radio_buttons_component_description">Radio Buttons with description and view</string>
    <string name="radio_buttons_component">Radio Buttons </string>
    <string name="toggle_icon">Toggle Icon</string>
    <string name="toggle_icon_desc">Toggle Icon description</string>
    <string name="iconic_button_description">Iconic button description</string>
    <string name="iconic_buttons">Iconic button</string>
    <string name="inline_button_description">Inline button description</string>
    <string name="inline_buttons">Inline button</string>
    <string name="component_dialog">Dialog</string>
    <string name="component_dialog_description">Dialog description</string>
    <string name="dialog_title">Dialog title</string>
    <string name="dialog_label">Dialog label</string>
    <string name="password_pin">Password pin</string>
    <string name="password_pin_desc">Correct passwords 888888 and 1010</string>
    <string name="masked_input">Masked input</string>
    <string name="masked_input_desc">Phone input text and date input</string>
    <string name="marks">Marks</string>
    <string name="marks_desc">Marks component</string>
    <string name="empty_state">Empty state</string>
    <string name="empty_state_desc">Empty state component</string>
    <string name="dropdown">Dropdown</string>
    <string name="dropdown_desc">Dropdown desc</string>
    <string name="textArea">Text Area</string>
    <string name="textArea_desc">Text Area desc</string>
    <string name="number_input">Number input</string>
    <string name="number_input_xml">Number input from XML</string>
    <string name="number_input_xml_desc">Number input ediTexts from configuration XML</string>
    <string name="number_input_desc">Enter sum more than 120.0 to show distractive attr</string>
    <string name="text_input">Text input</string>
    <string name="text_input_desc">Enter \"Space\" to check TextWatcher</string>
    <string name="search_text_input">Search input</string>
    <string name="search_text_input_desc">Enter 8888 to check change text listener</string>
    <string name="amount_showcase">Amount view showcase</string>
    <string name="amount_desc">Amount description</string>
    <string name="button_chip_showcase">Button chip showcase</string>
    <string name="button_chip_desc">Button chip description</string>
    <string name="sandbox_showcase">Sandbox showcase</string>
    <string name="sandbox_desc">Please use this showcase for you own purposes to test views</string>
    <string name="recycler_showcase">Recycler view showcase</string>
    <string name="recyclerr_desc">Page indicator with recycler view</string>
    <string name="page_indicator_view_pager">View Pager</string>
    <string name="page_indicator_view_pager_desc">Page indicator with View Pager</string>
    <string name="progress_navigator_showcase">Progress Navigator</string>
    <string name="progress_navigator_desc">Progress Navigator desc</string>
    <string name="feature_list">Feature list</string>
    <string name="feature_list_items">"Feature list items</string>
    <string name="feature_list_desc">Feature list desc</string>
    <string name="tab_navigation_showcase">Tab navigation showcase</string>
    <string name="tab_navigation_desc">Tab navigation (segment control) desc</string>
    <string name="accordion_showcase">Accordion showcase</string>
    <string name="accordion_desc">Expanded layout</string>
    <string name="profile_showcase">Profile showcase</string>
    <string name="profile_desc">Profile description</string>
    <string name="tag_showcase">Tag showcase</string>
    <string name="tag_desc">Just use tag styles for your SPTextView</string>
    <string name="otp_input">OTP input</string>
    <string name="otp_description">Correct passwords 888888 and 1010</string>
    <string name="tooltips">Tooltips input</string>
    <string name="tooltips_desc">Examples of tooltips</string>
    <string name="selectIcon">Select Icon</string>
    <string name="selectLanguage">Select Language</string>
    <string name="disable">Disable</string>
    <string name="chooseSettings">Choose settings</string>
    <string name="chooseCard">Choose card</string>
    <string name="description">Description</string>
    <string name="information_icon">Information icon</string>
    <string name="active">Active</string>
    <string name="pleaseEnterTheRightValue">Please, enter the right value</string>
    <string name="text_fields">Text fields</string>
    <string name="text_fields_desc">Text fields desc</string>
    <string name="text_views">Text views</string>
    <string name="text_views_desc">Text views (status messages and tags)</string>
    <string name="correct_password">Correct password</string>
    <string name="incorrect_password">Incorrect password</string>
    <string name="component_banners">Banners</string>
    <string name="component_banners_description">Banners description</string>
    <string name="component_banner_status">Status Banner</string>
    <string name="component_banner_status_description">Status Banner\'s usage is limited with four states: success, error, pending and info. therefore, it is not allowed to change Banner Image outside these states</string>
    <string name="component_banner_illustration">Illustration Banner</string>
    <string name="component_banner_illustration_description">Illustration Banner doesn\'t have limitations to change banner image alongside with other Base attributes: banner title, subtitle, description text and each of their visibility</string>
    <string name="component_banner_card">Card Banner</string>
    <string name="component_banner_card_description">Card Banner is represented as a banner with new credit card image resource</string>
    <string name="banner_title">Banner Title</string>
    <string name="banner_subtitle">Banner Subtitle</string>
    <string name="banner_description">Banner Description</string>
    <string name="component_bank_card">Bank cards</string>
    <string name="component_bank_card_description">Bank cards description</string>
    <string name="chips_card">Chips cards</string>
    <string name="chips_description">Chips description</string>
    <string name="component_tab_navigation">Tab Navigation</string>
    <string name="component_tab_navigation_description">Tab Navigation Description</string>
    <string name="component_bank_card_views">Bank card views</string>
    <string name="component_bank_card_views_description">Samples of Bank card using</string>
    <string name="component_small_empty_chip">Small empty chips</string>
    <string name="component_small_empty_chip_description">Samples of small empty chips using</string>
    <string name="component_chip_icons">Chip icons</string>
    <string name="component_chip_icons_description">Chip icons description</string>
    <string name="component_primary_chip">Primary chip</string>
    <string name="component_primary_chip_description">Samples of primary chips using according to the selected flavor</string>
    <string name="component_digital_chip">Digital chip</string>
    <string name="component_digital_chip_description">Samples of digital chips using according to the selected flavor</string>
    <string name="component_contry_chip">Country chip</string>
    <string name="component_country_description">Samples of country chips using according to the selected flavor</string>
    <string name="component_secondary_chip">Secondary chip</string>
    <string name="component_secondary_chip_description">Samples of secondary chips</string>
    <string name="switch_button">Switch Button</string>
    <string name="component_chip_list">Chip cards list</string>
    <string name="component_chip_list_description">Samples of chip cards list</string>
    <string name="title_usd">Showcases with USD</string>
    <string name="title_ge">Showcases with GE</string>
    <string name="title_eur">Showcases with EUR</string>
    <string name="withXml">from xml</string>
    <string name="created_programmatically">created by programmatically\n(without icon)</string>
    <string name="enter_you_details_here">Enter your details here</string>
    <string name="enter_amount">Enter amount</string>
    <string name="title_default_items">Showcases for default items</string>
    <string name="default_tab_text">14-21ივლისი 2018</string>
    <string name="component_otp_resend_sms">SMS-ის ხელმეორედ გაგზავნა</string>
    <string name="component_otp_label">შეიყვანე ვერიფიკაციის კოდი, რომელიც მიიღე ნომერზე:</string>
    <string name="text_sample">აჩუ-აჩუ ცხენო\nსაით გაგაჭენო,\nალაზანი დიდია\nშიგ ბებერი კიდია,\nპური ვთხოვე არ მაჭამა\nჩემი ცოდვა კიდია</string>
    <string name="small_text_sample">ბაყაყი წყალში ყიყინებს</string>
    <string name="component_otp_phone">+995 577 712021</string>
    <string name="component_new_credit_card">New credit card</string>
    <string name="component_new_credit_card_description">Samples of new credit cards</string>
    <string name="day_mask">##/##/##</string>
    <string name="status_message_success">Success</string>
    <string name="status_message_error">Error</string>
    <string name="status_message_pending">Pending</string>
    <string name="status_message_info">Info</string>
    <string-array name="planets">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
    </string-array>
    <string-array name="languages">
        <item>@string/georgia</item>
        <item>@string/ukraine</item>
    </string-array>
    <string name="georgia">Georgia</string>
    <string name="english">English</string>
    <string name="uzbekistan">Uzbekistan</string>
    <string name="ukraine">Ukraine</string>
    <string name="visa_gold">Visa Gold</string>
</resources>