<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/bannerInputTextsView"
            layout="@layout/sp_banner_input_fields_showcase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_p_20"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ge.space.ui.components.buttons.SPButton
            android:id="@+id/changeResourceButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_p_20"
            android:gravity="center"
            android:padding="@dimen/dimen_p_10"
            android:text="change resource"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_sp_18"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bannerInputTextsView"
            app:style="@style/SPButton.Primary"
            tools:ignore="HardcodedText" />

        <ge.space.ui.components.banner.SPBannerView
            android:id="@+id/bannerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toTopOf="@id/showFullScreenButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/changeResourceButton"
            app:banner_description="@string/banner_description"
            app:banner_subtitle="@string/banner_subtitle"
            app:banner_title="@string/banner_title" />

        <ge.space.ui.components.buttons.SPButton
            android:id="@+id/showFullScreenButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/sp_button_height"
            android:gravity="center"
            android:text="Show Full Screen"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_sp_18"
            app:layout_constraintBottom_toBottomOf="parent"
            app:style="@style/SPButton.Primary"
            tools:ignore="HardcodedText" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>